--- a/src/resources/custom-font-styles.css
+++ b/src/resources/custom-font-styles.css
@@ -179,7 +179,7 @@
     -fx-border-radius: 25px;
 }
 
-#win-round-view {
+#win-round-view, #win-view {
     -fx-background-color: rgba(0,0,0,0.5);
     -fx-border-width: 1px;
     -fx-border-color: rgb(255, 235, 167);
