base code of GameView implemented

--- a/src/resources/custom-font-styles.css
+++ b/src/resources/custom-font-styles.css
@@ -71,14 +71,17 @@
     -fx-cursor: hand
 }
 
-#main-menu-music-button {
+#music-button {
     -fx-background-color: rgba(0,0,0,0.5);
-    -fx-font-size: 26px;
+    -fx-font-size: 24px;
     -fx-background-radius: 20px;
     -fx-text-fill: white;
+    -fx-border-width: 1px;
+    -fx-border-radius: 20px;
+    -fx-border-color: rgb(255, 235, 167);
 }
 
-#main-menu-music-button:hover {
+#music-button:hover {
     -fx-text-fill: rgb(255, 235, 167);
     -fx-cursor: hand;
 }
